tests/negative/test_attrs_owning.orb
data Foo {
    x:i32
} (fnc dropFoo (val:Foo::noDrop) () {});

fnc main () () {
    sym f:Foo;
    sym (x 0::((abcd f)));
};